--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;  /* 中央寄せに変更 */
   align-items: center;
-  padding: 10vh 10vw 15vh 10vw; /* 上10%、左右10%、下15% */
+  padding: 15vh 10vw 20vh 10vw; /* 上15%、左右10%、下20% */
   box-sizing: border-box;
 }
 
 #app-container {
   width: 80vw;
   max-width: 400px;
-  height: 60vh; /* 高さを控えめに */
+  height: 50vh;  /* さらに低く */
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
