--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;  /* 中央寄せに変更 */
+  justify-content: flex-end; /* 下寄せ */
   align-items: center;
-  padding: 15vh 10vw 20vh 10vw; /* 上15%、左右10%、下20% */
+  padding: 5vh 10vw 15vh 10vw; /* 上5%、下15%に調整 */
   box-sizing: border-box;
 }
 
