--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@
   <style>
     /* ─────── 全体レイアウト ─────── */
     body {
-  background: white;
-  font-family: sans-serif;
+  min-height: 100vh;
   margin: 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end; /* 下寄せ */
-  align-items: center;
-  padding: 5vh 10vw 15vh 10vw; /* 上5%、下15%に調整 */
-  box-sizing: border-box;
+  padding: 0 10vw 10vh 10vw;
+  font-family: sans-serif;
 }
 
 #app-container {
