--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>書き込み式：今日の行動キャパ可視化紙</title>
+  <title> 研究棟1F：図形予定帳 </title>
   <style>
     body {
       background: white;
