--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title> 研究棟1F：図形予定帳 </title>
+  <title> 配分研究室 〜キャパシティ可視化ツール〜 </title>
   <style>
     body {
       background: white;
